<resources>
    <string name="app_name">Kancolle SoundBoard</string>
    <string name="banner_ad_unit_id">ca-app-pub-9198564050594981/7288693359</string>
    <string name="introduction">Introduction</string>
    <string name="library_intro">Library intro</string>
    <string name="secretary1">Secretary 1</string>
    <string name="secretary2">Secretary 2</string>
    <string name="secretary3">Secretary 3</string>
    <string name="secretary_married">Secretary Married</string>
    <string name="wedding">Wedding</string>
    <string name="show_player">Show player</string>
    <string name="joining_a_fleet">Joining a fleet</string>
    <string name="equipment1">Equipment 1</string>
    <string name="equipment2">Equipment 2</string>
    <string name="equipment3">Equipment 3</string>
    <string name="supply">Supply</string>
    <string name="docking_minor">Docking = minor</string>
    <string name="docking">Docking =</string>
    <string name="ship">Ship</string>
    <string name="return_from">Return from</string>
    <string name="start_a_sortie">Start a sortie</string>
    <string name="battle_start">Battle start</string>
    <string name="attack">Attack</string>
    <string name="night_battle">Night battle</string>
    <string name="night_attack">Night attack</string>
    <string name="MVP">MVP</string>
    <string name="minor1">minor 1</string>
    <string name="minor2">minor 2</string>
    <string name="moderately">=Moderately</string>
    <string name="sunk">Sunk</string>
    <string name="idle">Idle</string>
    <string name="instant_repair">Instant repair?</string>
    <string name="Fubuki">Fubuki</string>
    <string name="Kisaragi">Kisaragi</string>
    <string name="Mikazuki">Mikazuki</string>
    <string name="Mutsuki">Mutsuki</string>
    <string name="Nagatsuki">Nagatsuki</string>
    <string name="Shirayuki">Shirayuki</string>
    <string name="Miyuki">Miyuki</string>
    <string name="Isonami">Isonami</string>
    <string name="Ayanami">Ayanami</string>
    <string name="Shikinami">Shikinami</string>
    <string name="Akebono">Akebono</string>
    <string name="Ushio">Ushio</string>
    <string name="Kagerou">Kagerou</string>
    <string name="Shiranui">Shiranui</string>
    <string name="Kuroshio">Kuroshio</string>
    <string name="Yukihaze">Yukihaze</string>
    <string name="Nagara">Nagara</string>
    <string name="Isuzu">Isuzu</string>
    <string name="Yura">Yura</string>
    <string name="Ooi">Ooi</string>
    <string name="Ooi_Kai">Ooi Kai</string>
    <string name="Fuso">Fuso</string>
    <string name="Kitakami">Kitakami</string>
    <string name="Kitakami_Kai">Kitakami Kai</string>
    <string name="Yamashiro">Yamashiro</string>
    <string name="Satsuki">Satsuki</string>
    <string name="Fumizuki">Fumizuki</string>
    <string name="Kikuzuki">Kikuzuki</string>
    <string name="Mochizuki">Mochizuki</string>
    <string name="Hatsuyuki">Hatsuyuki</string>
    <string name="Murakumo">Murakumo</string>
    <string name="Akatsuki">Akatsuki</string>
    <string name="Hibiki">Hibiki</string>
    <string name="Ikazuchi">Ikazuchi</string>
    <string name="Inazuma">Inazuma</string>
    <string name="Hatsuharu">Hatsuharu</string>
    <string name="Nenohi">Nenohi</string>
    <string name="Wakaba">Wakaba</string>
    <string name="Hatsushimo">Hatsushimo</string>
    <string name="Shiratsuyu">Shiratsuyu</string>
    <string name="Shigure">Shigure</string>
    <string name="Murasame">Murasame</string>
    <string name="Yuudachi">Yuudachi</string>
    <string name="Samidare">Samidare</string>
    <string name="Suzukaze">Suzukaze</string>
    <string name="Arare">Arare</string>
    <string name="Kasumi">Kasumi</string>
    <string name="Shimakaze">Shimakaze</string>
    <string name="Tenryuu">Tenryuu</string>
    <string name="Tatsuta">Tatsuta</string>
    <string name="Natori">Natori</string>
    <string name="Sendai">Sendai</string>
    <string name="Jintsuu">Jintsuu</string>
    <string name="Naka">Naka</string>
    <string name="Furutaka">Furutaka</string>
    <string name="Kako">Kako</string>
    <string name="Aoba">Aoba</string>
    <string name="Myoukou">Myoukou</string>
    <string name="Nachi">Nachi</string>
    <string name="Ashigara">Ashigara</string>
    <string name="Haguro">Haguro</string>
    <string name="Takao">Takao</string>
    <string name="Atago">Atago</string>
    <string name="Maya">Maya</string>
    <string name="Choukai">Choukai</string>
    <string name="Mogami">Mogami</string>
    <string name="Mogami_Kai">Mogami Kai</string>
    <string name="Tone">Tone</string>
    <string name="Chikuma">Chikuma</string>
    <string name="Shouhou">Shouhou</string>
    <string name="Hiyou">Hiyou</string>
    <string name="Ryuujou">Ryuujou</string>
    <string name="Ise">Ise</string>
    <string name="Ise_Kai">Ise Kai</string>
    <string name="Kongou">Kongou</string>
    <string name="Haruna">Haruna</string>
    <string name="Nagato">Nagato</string>
    <string name="Mutsu">Mutsu</string>
    <string name="Akagi">Akagi</string>
    <string name="Kaga">Kaga</string>
    <string name="Kirishima">Kirishima</string>
    <string name="Hiei">Hiei</string>
    <string name="Hyuuga">Hyuuga</string>
    <string name="Hyuuga_Kai">Hyuuga Kai</string>
    <string name="Houshou">Houshou</string>
    <string name="Souryuu">Souryuu</string>
    <string name="Hiryuu">Hiryuu</string>
    <string name="Junyou">Junyou</string>


</resources>
