<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".KancolleSB"
    android:background="#d5daf0">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="350dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btnfav">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnfubuki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fubuki" />

            <Button
                android:id="@+id/btnkisaragi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Kisaragi" />

            <Button
                android:id="@+id/btnmikazuki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mikazuki" />

            <Button
                android:id="@+id/btnmutsuki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Mutsuki" />

            <Button
                android:id="@+id/btnisonami"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Isonami" />

            <Button
                android:id="@+id/btnayanami"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ayanami" />

            <Button
                android:id="@+id/btnshikinami"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Shikinami" />

            <Button
                android:id="@+id/btnakebono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Akebono" />

            <Button
                android:id="@+id/btnushio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ushio" />

            <Button
                android:id="@+id/btnkagerou"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Kagerou" />


            <Button
                android:id="@+id/btnfuso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fuso" />
            <Button
                android:id="@+id/btnbonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="!!!!!BONUS!!!!!" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Clicks"
        android:id="@+id/btnfav"
        android:layout_above="@+id/adView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
